// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given asset 1`] = `
Object {
  "data": Array [
    8,
    2,
    16,
    0,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransaction should return signed transaction for given asset schema 1`] = `
Object {
  "asset": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      45,
      149,
      204,
      201,
      194,
      80,
      188,
      27,
      88,
      109,
      194,
      94,
      89,
      251,
      163,
      245,
      188,
      221,
      255,
      240,
      92,
      167,
      134,
      83,
      188,
      156,
      197,
      67,
      64,
      211,
      212,
      189,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        238,
        171,
        74,
        24,
        224,
        198,
        160,
        170,
        147,
        239,
        3,
        241,
        66,
        81,
        87,
        33,
        131,
        124,
        154,
        16,
        54,
        158,
        191,
        62,
        162,
        136,
        58,
        167,
        72,
        220,
        215,
        32,
        3,
        59,
        164,
        235,
        249,
        252,
        222,
        209,
        11,
        227,
        174,
        70,
        42,
        224,
        159,
        110,
        147,
        61,
        75,
        189,
        237,
        235,
        212,
        255,
        50,
        111,
        121,
        26,
        247,
        220,
        63,
        11,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `[Function]`;
